...
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:id="@+id/itemNameField_CL"
                android:hint="@string/bicycle_string"
                android:singleLine="true"
                android:textColorHint="@color/colorMiddle"
                android:textColor="@color/colorForeground"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/title_CL"
...
                android:layout_toEndOf="@+id/itemName_CL" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/itemPriceField_CL"
                android:textColorHint="@color/colorMiddle"
                android:textColor="@color/colorForeground"
                android:hint="@string/examplePrice_string"
                android:textIsSelectable="false"
                android:ems="7"
                android:maxEms="7"
                android:layout_alignLeft="@+id/itemNameField_CL"
                android:layout_alignStart="@+id/itemNameField_CL"
                android:layout_below="@+id/itemNameField_CL"
                android:layout_toLeftOf="@+id/itemPriceSpinner_CL"
                android:layout_toStartOf="@+id/itemPriceSpinner_CL" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
...
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addPhotos_cl"
                android:id="@+id/addPhotosButton_CL"
                android:layout_marginTop="33dp"
                android:layout_below="@+id/itemDescriptionField_CL"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:layout_alignParentStart="true"
                android:layout_marginTop="37dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categorySpinner_CL"
                android:entries="@array/itemCategories_array"
                android:layout_toRightOf="@+id/rentDuration_CL"
                android:textColor="@color/colorForeground"
                android:layout_toLeftOf="@+id/itemPriceSpinner_CL"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
...
                android:layout_toEndOf="@+id/rentDuration_CL"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish_string"
                android:id="@+id/finishButton_CL"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:contentDescription="Fill In My Content Description!"
...
                android:layout_above="@+id/categorySpinner_CL"
                android:layout_below="@+id/itemDescriptionField_CL" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minRentSpinner_CL"
                android:entries="@array/minRentDur_array"
                android:textColor="@color/colorForeground"
                android:layout_toEndOf="@+id/rentDuration_CL"
                android:layout_toRightOf="@+id/rentDuration_CL"
                android:layout_alignTop="@+id/minRentDuration_CL"
                android:layout_alignBottom="@+id/minRentDuration_CL" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
...
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/depositQues_string"
                android:id="@+id/depositQues_string"
                android:textColor="@color/colorForeground"
                android:layout_marginTop="29dp"
                android:layout_below="@+id/itemBuyout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exclaimYes"
                android:id="@+id/depositYes"
                android:layout_below="@+id/depositQues_string"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:checked="false"
                android:textColor="@color/colorForeground" />

...
                android:maxEms="7"
                android:layout_below="@+id/depositYes"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/finishButton_CL"
                android:layout_alignEnd="@+id/finishButton_CL"
                android:id="@+id/amountOfDeposit_CL" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/priceNegtble"
                android:checked="false"
                android:text="@string/priceNegotiable"
                android:textColor="@color/colorForeground"
                android:layout_below="@+id/minRentDuration_CL"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
...
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:id="@+id/zipCodeField_CL"
                android:hint="@string/zcf_cl"
                android:singleLine="true"
                android:textColorHint="@color/colorMiddle"
                android:textColor="@color/colorForeground"
                android:layout_alignBaseline="@+id/zipCode_CL"
                android:layout_alignBottom="@+id/zipCode_CL"
...
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLength="150"
                android:ems="10"
                android:id="@+id/contactInfoField_CL"
                android:textColorHint="@color/colorMiddle"
                android:hint="@string/cif_cl"
                android:textColor="@color/colorForeground"
                android:layout_below="@+id/contact_CL"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
...
