<!-- <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="sdgkteam10.rent_it.RegistrationActivity">-->

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/registration_scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="UselessParent"

        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorBackground"
        tools:context="sdgkteam10.rent_it.RegistrationActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/register_title"
                android:layout_width="246dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:foregroundGravity="center_horizontal"
                android:text="@string/register_title_str"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorForeground"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/required_field_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/required_field"
                android:textColor="@color/colorForeground"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fill_name"
                android:layout_width="276dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ellipsize="none"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorForeground"
                android:hint="@string/fill_name_hint" />

            <EditText
                android:id="@+id/fill_email"
                android:layout_width="276dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorForeground"
                android:hint="@string/fill_email_str" />

            <EditText
                android:id="@+id/fill_pw1"
                android:layout_width="276dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/colorForeground"
                android:hint="@string/fill_pw1_str" />

            <EditText
                android:id="@+id/fill_pw2"
                android:layout_width="276dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/colorForeground"
                android:hint="@string/fill_pw2_str" />

            <EditText
                android:id="@+id/fill_address1"
                android:layout_width="276dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:textColor="@color/colorForeground"
                android:hint="@string/fill_address1_str" />

            <EditText
                android:id="@+id/fill_address2"
                android:layout_width="276dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:paddingTop="0dp"
                android:textColor="@color/colorForeground"
                android:hint="@string/fill_address2_str" />

            <EditText
                android:id="@+id/fill_city"
                android:layout_width="276dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:textColor="@color/colorForeground"
                android:hint="@string/fill_city_str" />

            <Spinner
                android:id="@+id/fill_state"
                android:layout_width="301dp"
                android:layout_height="46dp"
                android:layout_gravity="center_horizontal"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/fill_zip"
                android:layout_width="276dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:paddingTop="0dp"
                android:textColor="@color/colorForeground"
                android:hint="@string/fill_zip_str" />

            <EditText

                android:id="@+id/fill_phone"
                android:layout_width="276dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="phone"
                android:textColor="@color/colorForeground"
                android:hint="@string/fill_phone_str" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/submit_button_str" />

        </LinearLayout>
    </ScrollView>
<!--</FrameLayout>-->
